syntax = "proto3";

package proto;

option go_package = ".;proto";

import "google/protobuf/empty.proto";

service SshAccounts {
  rpc Watch(google.protobuf.Empty) returns (stream SshAccount) {}
}

message SshAccount {
  bool is_del = 1;
  string username = 2;
  string public_key = 3;
}